Part 2/Exercise 2.02/Project serve v1.0/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: danfor/todo-app
        imagePullPolicy: Never
        volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
      volumes:
      - name: shared-data
        persistentVolumeClaim:
            claimName: timestamp-claim
